# aerospike-py

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .tokeignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  POSTMORTEM-v0.5.6-batch-regression.md  README.md  SECURITY.md  async-architecture-comparison.md  compare.html  compose.local.yaml  compose.sample-fastapi.yaml  debug.md  mkdocs.yml  pyo3-optimization-summary.md  pyo3-optimization-summary2.md  pyproject.toml  tokei.toml  tox.toml
.claude/: perf-hot-paths.txt  settings.json
.claude/agents/: perf-impact-reviewer.md  pyo3-reviewer.md  sample-fastapi-qa.md  type-stub-sync.md
.claude/hooks/: pr-perf-gate.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ace-plugins-pr-notify.yml  agent-implement.lock.yml  agent-implement.yml  agent-team.lock.yml  agent-team.md  agent.lock.yml  benchmark.yaml  ci.yaml  claude.yml  daily-release.yml  docs-publish.yaml  docs-version.yaml  docs.yaml  issue-planner.lock.yml  issue-planner.md  issue-planner.yml  pr-reviewer.lock.yml  pr-reviewer.yml  publish.yaml  skill-impact-notify.yml
aerospike-desktop-manager/: Dockerfile.backend  Makefile  README.md  docker-compose.yaml  test.md
aerospike-desktop-manager/backend/: README.md  config.py  dependencies.py  exceptions.py  main.py  pyproject.toml
aerospike-desktop-manager/backend/models/: admin.py  cluster.py  common.py  connection.py  index.py  record.py  udf.py
aerospike-desktop-manager/backend/routers/: admin.py  batch.py  cluster.py  connections.py  import_export.py  indexes.py  metrics.py  namespaces.py  operations.py  records.py  terminal.py  truncate.py  udfs.py
aerospike-desktop-manager/backend/services/: connection_manager.py  import_export.py
aerospike-desktop-manager/backend/utils/: constants.py  info_parser.py  key_helpers.py  serialization.py
aerospike-desktop-manager/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
benchmark/: README.md  RESULTS.md  bench_async.py  bench_batch_numpy.py  bench_compare.py  bench_numpy_compare.py  bench_sync.py  report_generator.py  run_all.sh
docs/: .gitignore  contributing.md  docusaurus.config.ts  getting-started.md  index.md  package-lock.json  package.json  sidebars.ts  versions-config.json  versions.json
docs/api/: async-client.md  client.md  constants.md  exceptions.md  query-scan.md
docs/blog/: authors.yml
docs/docs/: contributing.md  faq.md  getting-started.md
docs/guides/: admin.md  batch.md  cdt-list.md  cdt-map.md  crud.md  expression-filters.md  query-scan.md  udf.md
docs/scripts/: create-version.sh  generate-agent-docs.mjs  update-version-config.mjs
docs/static/: llms-full.txt  llms.txt
examples/sample-fastapi/: README.md  docker-compose.yaml  pyproject.toml
examples/sample-fastapi/app/: config.py  dependencies.py  exception_handlers.py  main.py  models.py
examples/sample-fastapi/app/routers/: admin_roles.py  admin_users.py  batch.py  cluster.py  indexes.py  numpy_batch.py  observability.py  operations.py  records.py  truncate.py  udf.py  users.py
examples/sample-fastapi/tests/: conftest.py  test_admin_roles.py  test_admin_users.py  test_batch.py  test_cluster.py  test_health.py  test_indexes.py  test_numpy_batch.py  test_observability.py  test_operations.py  test_records.py  test_truncate.py  test_udf.py  test_users.py
examples/sample-fastapi/tests/fixtures/: test_udf.lua
rust/: Cargo.toml
rust/fuzz/: Cargo.toml  README.md
rust/fuzz/fuzz_targets/: fuzz_write_bytes.rs  fuzz_write_float.rs  fuzz_write_int.rs
rust/src/: async_client.rs  backpressure.rs  batch_types.rs  bug_report.rs  client.rs  client_common.rs  client_ops.rs  constants.rs  errors.rs  expressions.rs  lib.rs  logging.rs  metrics.rs  numpy_support.rs  operations.rs  profiling.rs  query.rs  record_helpers.rs  runtime.rs  tracing.rs
rust/src/policy/: admin_policy.rs  batch_policy.rs  client_policy.rs  mod.rs  query_policy.rs  read_policy.rs  write_policy.rs
rust/src/telemetry/: logging.rs  mod.rs
rust/src/types/: bin.rs  host.rs  key.rs  mod.rs  record.rs  value.rs
scripts/: aerospike.template.conf  generate-api-docs.py
src/aerospike/: __init__.py  __init__.pyi  exception.py  exception.pyi  predicates.py  predicates.pyi
src/aerospike_py/: __init__.py  __init__.pyi  _async_client.py  _bug_report.py  _client.py  _observability.py  _types.py  bit_operations.py  exception.py  exception.pyi  exp.py  exp.pyi  hll_operations.py  hll_operations.pyi  list_operations.py  list_operations.pyi  logging.py  map_operations.py  map_operations.pyi  numpy_batch.py  numpy_batch.pyi  otel.py  otel.pyi  predicates.py  predicates.pyi  profiling.py  profiling.pyi  telemetry.py  telemetry.pyi  types.py
tests/: __init__.py  aerospike.conf  conftest.py  helpers.py  test_numpy_batch.py  test_udf.lua
tests/compatibility/: conftest.py  test_batch.py  test_cdt_operations.py  test_constants.py  test_cross_crud.py  test_data_types.py  test_edge_case_data.py  test_error_behavior.py  test_expression_filters.py  test_info_and_truncate.py  test_operate_ordered.py  test_policy_combinations.py  test_return_format.py  test_scan_query.py
tests/concurrency/: conftest.py  test_aexit_close_unification.py  test_async_concurrency.py  test_connect_race.py  test_freethreading.py  test_thread_safety.py  utils.py
tests/feasibility/: conftest.py  test_fastapi.py  test_gunicorn.py
tests/integration/: conftest.py  test_admin.py  test_async.py  test_async_numpy_batch.py  test_async_scenarios.py  test_async_udf.py  test_batch.py  test_bugfix.py  test_crud.py  test_docs_examples.py  test_expressions.py  test_fastapi_metrics.py  test_info.py  test_numpy_batch.py  test_numpy_batch_edge_cases.py  test_query_scan.py  test_scenarios.py  test_udf.py
tests/unit/: test_batch_apply_types.py  test_batch_write_generic.py  test_bit_operations.py  test_bug_report.py  test_concurrency.py  test_context_manager.py  test_docstring_examples.py  test_edge_cases.py  (+18 more)
website/: docusaurus.config.ts
(+206 files in other folders)
