[project]
name = "aerospike-py"
dynamic = ["version"]
description = "Aerospike Python Client - PyO3 + Rust binding"
readme = "README.md"
authors = [
    { name = "KimSoungRyoul", email = "KimSoungRyoul@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = []

[project.optional-dependencies]
bench = ["aerospike"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "maturin>=1.9,<2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "aerospike_py._aerospike"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
include = ["LICENSE"]
