[project]
name = "aerospike-py"
dynamic = ["version"]
description = "Aerospike Python Client - PyO3 + Rust binding"
readme = "README.md"
authors = [
    { name = "KimSoungRyoul", email = "KimSoungRyoul@gmail.com" }
]
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=2.0"]

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "ruff", "maturin>=1.9,<2", "numpy>=2.0"]
bench = ["aerospike>=17.0.0", "numpy>=2.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "aerospike_py._aerospike"
manifest-path = "rust/Cargo.toml"
features = ["pyo3/extension-module"]
include = ["LICENSE"]
