[package]
name = "aerospike-py-native"
version = "0.1.0"
edition = "2021"

[lib]
name = "_aerospike"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
aerospike = { git = "https://github.com/aerospike/aerospike-client-rust.git", tag = "v2.0.0-alpha.9", features = ["async", "rt-tokio"] }
aerospike-core = { git = "https://github.com/aerospike/aerospike-client-rust.git", tag = "v2.0.0-alpha.9" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1"
