[package]
name = "aerospike-py-native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_aerospike"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
aerospike = { version = "2.0.0-alpha.9", features = ["async", "rt-tokio"], default-features = false }
aerospike-core = { version = "2.0.0-alpha.9" }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
half = "2"
