[package]
name = "aerospike-py-native"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "_aerospike"
crate-type = ["cdylib"]

[features]
default = []
telemetry = ["tracing", "tracing-subscriber", "tracing-log", "crossbeam-channel"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
aerospike = { version = "2.0.0-alpha.9", features = ["async", "rt-tokio"], default-features = false }
aerospike-core = { version = "2.0.0-alpha.9" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync", "io-util"] }
futures = "0.3"
half = "2"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"], optional = true }
tracing-log = { version = "0.2", optional = true }
crossbeam-channel = { version = "0.5", optional = true }
