[project]
name = "aerospike-desktop-manager"
version = "0.2.0"
description = "Web-based Aerospike Desktop Manager inspired by tiny-rdm"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "websockets>=13.0",
    "aerospike-py",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.uv]
sources.aerospike-py = { path = "../../", editable = true }

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
